--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.dataScience.jupyterServerURI": "https://hostname:8080/?token=849d61a414abafab97bc4aab1f3547755ddc232c2b8cb7fe",
-    "python.pythonPath": "/bin/python3"
+    "python.pythonPath": "/bin/python3",
+    "python.linting.enabled": false
 }
